feat: grupo endpoints grupo funcionando perfecto
